--- a/top_amz_products/requirements.txt
+++ b/top_amz_products/requirements.txt
@@ -12,16 +12,22 @@ beautifulsoup4==4.12.2
 certifi==2022.12.7
 charset-normalizer==3.3.2
 click==8.1.3
+contourpy==1.2.0
+cycler==0.12.1
 distro==1.9.0
 Django==5.0.1
 exceptiongroup==1.1.1
+fonttools==4.50.0
 frozenlist==1.3.3
+google_search_results==2.4.2
 h11==0.14.0
 httpcore==1.0.4
 httpx==0.27.0
 idna==3.4
+kiwisolver==1.4.5
 libretranslatepy==2.1.1
 lxml==4.9.2
+matplotlib==3.8.3
 multidict==6.0.4
 numpy==1.24.3
 openai==1.14.0
@@ -35,6 +41,7 @@ pydantic==2.6.4
 pydantic_core==2.16.3
 PyJWT==2.6.0
 PyMySQL==1.1.0
+pyparsing==3.1.2
 PyPDF2==1.26.0
 PySocks==1.7.1
 python-dateutil==2.8.2
