adding command for variables

--- a/top_amz_products/.ebextensions/django.config
+++ b/top_amz_products/.ebextensions/django.config
@@ -1,3 +1,9 @@
 options_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPATH: top_amz_products.wsgi:application
+
+commands:
+  01_set_env_variables:
+    command: "eb setenv `cat .env | sed '/^#/ d' | sed '/^$/ d'`"
+
+    
